Refactored: changed getFirst() to get(0)