@@ -36,7 +36,7 @@ class BoardPieceTest {
     	board.loadTileData();
     	board.pathInfo=Util.readPathData("WitchCauldron");
     	initBoard();
-    	Tile tile=board.getLastWinningPiece().getTiles().getFirst();
+    	Tile tile=board.getLastWinningPiece().getTiles().get(0);
 		assertEquals(14,tile.getRow());
 		assertEquals(10,tile.getCol());
     }
@@ -47,7 +47,7 @@ class BoardPieceTest {
     	board.loadTileData();
     	board.pathInfo=Util.readPathData("WindingPaths");
     	initBoard();
-    	Tile tile=board.getLastWinningPiece().getTiles().getFirst();
+    	Tile tile=board.getLastWinningPiece().getTiles().get(0);
 		assertEquals(4,tile.getRow());
 		assertEquals(33,tile.getCol());
     }
@@ -58,7 +58,7 @@ class BoardPieceTest {
     	board.loadTileData();
     	board.pathInfo=Util.readPathData("HillsOfGold");
     	initBoard();
-    	Tile tile=board.getLastWinningPiece().getTiles().getFirst();
+    	Tile tile=board.getLastWinningPiece().getTiles().get(0);
 		assertEquals(17,tile.getRow());
 		assertEquals(31,tile.getCol());
     }
@@ -68,7 +68,7 @@ class BoardPieceTest {
     	board.loadTileData();
     	board.pathInfo=Util.readPathData("Serpentine");
     	initBoard();
-    	Tile tile=board.getLastWinningPiece().getTiles().getFirst();
+    	Tile tile=board.getLastWinningPiece().getTiles().get(0);
 		assertEquals(13,tile.getRow());
 		assertEquals(24,tile.getCol());
     }
